--- a/Starter_Code/financial_planning_tools.ipynb
+++ b/Starter_Code/financial_planning_tools.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load the environment variables from the .env file\n",
     "#by calling the load_dotenv function\n",
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The monthly amount for the member's household income\n",
-    "# YOUR CODE HERE\n"
+    "monthly_income = 12000\n"
    ]
   },
   {
@@ -109,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,30 +138,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"data\": {\n",
+      "        \"1\": {\n",
+      "            \"id\": 1,\n",
+      "            \"name\": \"Bitcoin\",\n",
+      "            \"symbol\": \"BTC\",\n",
+      "            \"website_slug\": \"bitcoin\",\n",
+      "            \"rank\": 1,\n",
+      "            \"circulating_supply\": 18671006,\n",
+      "            \"total_supply\": 18671006,\n",
+      "            \"max_supply\": 21000000,\n",
+      "            \"quotes\": {\n",
+      "                \"USD\": {\n",
+      "                    \"price\": 58888.0,\n",
+      "                    \"volume_24h\": 54791691384,\n",
+      "                    \"market_cap\": 1098595777644,\n",
+      "                    \"percentage_change_1h\": 0.425388278811733,\n",
+      "                    \"percentage_change_24h\": 0.17769594477332,\n",
+      "                    \"percentage_change_7d\": 12.1101946553292,\n",
+      "                    \"percent_change_1h\": 0.425388278811733,\n",
+      "                    \"percent_change_24h\": 0.17769594477332,\n",
+      "                    \"percent_change_7d\": 12.1101946553292\n",
+      "                }\n",
+      "            },\n",
+      "            \"last_updated\": 1617316415\n",
+      "        }\n",
+      "    },\n",
+      "    \"metadata\": {\n",
+      "        \"timestamp\": 1617316415,\n",
+      "        \"num_cryptocurrencies\": 1329,\n",
+      "        \"error\": null\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Using the Python requests library, make an API call to access the current price of BTC\n",
-    "btc_response = # YOUR CODE HERE\n",
+    "btc_response = requests.get(btc_url).json()\n",
     "\n",
     "# Use the json.dumps function to review the response data from the API call\n",
     "# Use the indent and sort_keys parameters to make the response object readable\n",
-    "# YOUR CODE HERE\n"
+    "print(json.dumps(btc_response, sort_keys = False, indent=4))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"data\": {\n",
+      "        \"1027\": {\n",
+      "            \"id\": 1027,\n",
+      "            \"name\": \"Ethereum\",\n",
+      "            \"symbol\": \"ETH\",\n",
+      "            \"website_slug\": \"ethereum\",\n",
+      "            \"rank\": 2,\n",
+      "            \"circulating_supply\": 115295188,\n",
+      "            \"total_supply\": 115295188,\n",
+      "            \"max_supply\": 0,\n",
+      "            \"quotes\": {\n",
+      "                \"USD\": {\n",
+      "                    \"price\": 1963.19,\n",
+      "                    \"volume_24h\": 32146826402,\n",
+      "                    \"market_cap\": 226125664964,\n",
+      "                    \"percentage_change_1h\": -0.0381297649063499,\n",
+      "                    \"percentage_change_24h\": 2.4019432541165,\n",
+      "                    \"percentage_change_7d\": 24.1241310465996,\n",
+      "                    \"percent_change_1h\": -0.0381297649063499,\n",
+      "                    \"percent_change_24h\": 2.4019432541165,\n",
+      "                    \"percent_change_7d\": 24.1241310465996\n",
+      "                }\n",
+      "            },\n",
+      "            \"last_updated\": 1617316465\n",
+      "        }\n",
+      "    },\n",
+      "    \"metadata\": {\n",
+      "        \"timestamp\": 1617316465,\n",
+      "        \"num_cryptocurrencies\": 1329,\n",
+      "        \"error\": null\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Using the Python requests library, make an API call to access the current price ETH\n",
-    "eth_response = # YOUR CODE HERE\n",
+    "eth_response = requests.get(eth_url).json()\n",
     "\n",
     "# Use the json.dumps function to review the response data from the API call\n",
     "# Use the indent and sort_keys parameters to make the response object readable\n",
-    "# YOUR CODE HERE\n"
+    "print(json.dumps(eth_response, sort_keys = False, indent=4))\n"
    ]
   },
   {
@@ -162,28 +253,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58888.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Navigate the BTC response object to access the current price of BTC\n",
-    "btc_price = # YOUR CODE HERE\n",
+    "btc_price = btc_response['data']['1']['quotes']['USD']['price']\n",
     "\n",
     "# Print the current price of BTC\n",
-    "# YOUR CODE HERE\n"
+    "print(btc_price)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1963.19\n"
+     ]
+    }
+   ],
    "source": [
     "# Navigate the BTC response object to access the current price of ETH\n",
-    "eth_price = # YOUR CODE HERE\n",
+    "eth_price = eth_response['data']['1027']['quotes']['USD']['price']\n",
     "\n",
     "# Print the current price of ETH\n",
-    "# YOUR CODE HERE\n"
+    "print(eth_price)\n"
    ]
   },
   {
@@ -195,42 +302,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$ 70665.60\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute the current value of the BTC holding \n",
-    "btc_value = # YOUR CODE HERE\n",
+    "btc_value = btc_coins * btc_price\n",
     "\n",
     "# Print current value of your holding in BTC\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"${btc_value: .2f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$ 10404.91\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute the current value of the ETH holding \n",
-    "eth_value = # YOUR CODE HERE\n",
+    "eth_value = round(eth_coins * eth_price, 2)\n",
     "\n",
     "# Print current value of your holding in ETH\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"${eth_value: .2f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$ 81070.51\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute the total value of the cryptocurrency wallet\n",
     "# Add the value of the BTC holding to the value of the ETH holding\n",
-    "total_crypto_wallet = # YOUR CODE HERE\n",
+    "total_crypto_wallet = btc_value + eth_value\n",
     "\n",
     "# Print current cryptocurrency wallet balance\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"${total_crypto_wallet: .2f}\")"
    ]
   },
   {
@@ -942,9 +1073,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dev)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -956,7 +1087,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
