Used alpaca AP to pull data for stock and bond portfolio. Updated total portfolio value based on data pulled

--- a/Starter_Code/financial_planning_tools.ipynb
+++ b/Starter_Code/financial_planning_tools.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,21 +31,29 @@
     "import alpaca_trade_api as tradeapi\n",
     "from MCForecastTools import MCSimulation\n",
     "\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Python-dotenv could not parse statement starting at line 1\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,27 +161,27 @@
       "            \"symbol\": \"BTC\",\n",
       "            \"website_slug\": \"bitcoin\",\n",
       "            \"rank\": 1,\n",
-      "            \"circulating_supply\": 18671006,\n",
-      "            \"total_supply\": 18671006,\n",
+      "            \"circulating_supply\": 18671668,\n",
+      "            \"total_supply\": 18671668,\n",
       "            \"max_supply\": 21000000,\n",
       "            \"quotes\": {\n",
       "                \"USD\": {\n",
-      "                    \"price\": 58888.0,\n",
-      "                    \"volume_24h\": 54791691384,\n",
-      "                    \"market_cap\": 1098595777644,\n",
-      "                    \"percentage_change_1h\": 0.425388278811733,\n",
-      "                    \"percentage_change_24h\": 0.17769594477332,\n",
-      "                    \"percentage_change_7d\": 12.1101946553292,\n",
-      "                    \"percent_change_1h\": 0.425388278811733,\n",
-      "                    \"percent_change_24h\": 0.17769594477332,\n",
-      "                    \"percent_change_7d\": 12.1101946553292\n",
+      "                    \"price\": 59493.0,\n",
+      "                    \"volume_24h\": 53874642571,\n",
+      "                    \"market_cap\": 1109798703053,\n",
+      "                    \"percentage_change_1h\": -0.242968330381274,\n",
+      "                    \"percentage_change_24h\": 0.753639108005676,\n",
+      "                    \"percentage_change_7d\": 15.7065516118009,\n",
+      "                    \"percent_change_1h\": -0.242968330381274,\n",
+      "                    \"percent_change_24h\": 0.753639108005676,\n",
+      "                    \"percent_change_7d\": 15.7065516118009\n",
       "                }\n",
       "            },\n",
-      "            \"last_updated\": 1617316415\n",
+      "            \"last_updated\": 1617379417\n",
       "        }\n",
       "    },\n",
       "    \"metadata\": {\n",
-      "        \"timestamp\": 1617316415,\n",
+      "        \"timestamp\": 1617379417,\n",
       "        \"num_cryptocurrencies\": 1329,\n",
       "        \"error\": null\n",
       "    }\n",
@@ -192,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,27 +215,27 @@
       "            \"symbol\": \"ETH\",\n",
       "            \"website_slug\": \"ethereum\",\n",
       "            \"rank\": 2,\n",
-      "            \"circulating_supply\": 115295188,\n",
-      "            \"total_supply\": 115295188,\n",
+      "            \"circulating_supply\": 115304969,\n",
+      "            \"total_supply\": 115304969,\n",
       "            \"max_supply\": 0,\n",
       "            \"quotes\": {\n",
       "                \"USD\": {\n",
-      "                    \"price\": 1963.19,\n",
-      "                    \"volume_24h\": 32146826402,\n",
-      "                    \"market_cap\": 226125664964,\n",
-      "                    \"percentage_change_1h\": -0.0381297649063499,\n",
-      "                    \"percentage_change_24h\": 2.4019432541165,\n",
-      "                    \"percentage_change_7d\": 24.1241310465996,\n",
-      "                    \"percent_change_1h\": -0.0381297649063499,\n",
-      "                    \"percent_change_24h\": 2.4019432541165,\n",
-      "                    \"percent_change_7d\": 24.1241310465996\n",
+      "                    \"price\": 2075.31,\n",
+      "                    \"volume_24h\": 37303217064,\n",
+      "                    \"market_cap\": 238269275566,\n",
+      "                    \"percentage_change_1h\": -0.105831081433117,\n",
+      "                    \"percentage_change_24h\": 6.4606000058087,\n",
+      "                    \"percentage_change_7d\": 30.7445262265489,\n",
+      "                    \"percent_change_1h\": -0.105831081433117,\n",
+      "                    \"percent_change_24h\": 6.4606000058087,\n",
+      "                    \"percent_change_7d\": 30.7445262265489\n",
       "                }\n",
       "            },\n",
-      "            \"last_updated\": 1617316465\n",
+      "            \"last_updated\": 1617379425\n",
       "        }\n",
       "    },\n",
       "    \"metadata\": {\n",
-      "        \"timestamp\": 1617316465,\n",
+      "        \"timestamp\": 1617379425,\n",
       "        \"num_cryptocurrencies\": 1329,\n",
       "        \"error\": null\n",
       "    }\n",
@@ -253,14 +261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "58888.0\n"
+      "59493.0\n"
      ]
     }
    ],
@@ -274,14 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1963.19\n"
+      "2075.31\n"
      ]
     }
    ],
@@ -302,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$ 70665.60\n"
+      "$ 71391.60\n"
      ]
     }
    ],
@@ -323,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$ 10404.91\n"
+      "$ 10999.14\n"
      ]
     }
    ],
@@ -344,14 +352,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$ 81070.51\n"
+      "$ 82390.74\n"
      ]
     }
    ],
@@ -400,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,16 +433,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the variables for the Alpaca API and secret keys\n",
-    "# YOUR CODE HERE\n",
-    "# YOUR CODE HERE\n",
+    "alpaca_api_key = os.getenv(\"ALPACA_API_KEY\")\n",
+    "alpaca_secret_key = os.getenv(\"ALPACA_SECRET_KEY\")\n",
     "\n",
     "# Create the Alpaca tradeapi.REST object\n",
-    "# YOUR CODE HERE\n"
+    "alpaca = tradeapi.REST(\n",
+    "    alpaca_api_key,\n",
+    "    alpaca_secret_key,\n",
+    "    api_version=\"v2\"\n",
+    ")\n"
    ]
   },
   {
@@ -452,22 +464,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the tickers for both the bond and stock portion of the portfolio\n",
-    "# YOUR CODE HERE\n",
+    "tickers = [\"SPY\", \"AGG\"]\n",
     "\n",
     "# Set timeframe to 1D \n",
-    "# YOUR CODE HERE\n",
+    "timeframe = \"1D\"\n",
     "\n",
     "# Format current date as ISO format\n",
     "# Set both the start and end date at the date of your prior weekday \n",
     "# This will give you the closing price of the previous trading day\n",
     "# Alternatively you can use a start and end date of 2020-08-07\n",
-    "# YOUR CODE HERE\n",
-    "# YOUR CODE HERE\n"
+    "sample_date = pd.Timestamp(\"2020-08-27\", tz=\"America/New_York\").isoformat()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -479,16 +492,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"5\" halign=\"left\">AGG</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">SPY</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-08-27 00:00:00-04:00</th>\n",
+       "      <td>118.55</td>\n",
+       "      <td>118.56</td>\n",
+       "      <td>117.95</td>\n",
+       "      <td>117.97</td>\n",
+       "      <td>10926192</td>\n",
+       "      <td>348.51</td>\n",
+       "      <td>349.9</td>\n",
+       "      <td>346.53</td>\n",
+       "      <td>348.29</td>\n",
+       "      <td>102932378</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              AGG                                       SPY  \\\n",
+       "                             open    high     low   close    volume    open   \n",
+       "time                                                                          \n",
+       "2020-08-27 00:00:00-04:00  118.55  118.56  117.95  117.97  10926192  348.51   \n",
+       "\n",
+       "                                                             \n",
+       "                            high     low   close     volume  \n",
+       "time                                                         \n",
+       "2020-08-27 00:00:00-04:00  349.9  346.53  348.29  102932378  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use the Alpaca get_barset function to get current closing prices the portfolio\n",
     "# Be sure to set the `df` property after the function to format the response object as a DataFrame\n",
-    "# YOUR CODE HERE\n",
+    "df_portfolio = alpaca.get_barset(\n",
+    "    tickers,\n",
+    "    timeframe,\n",
+    "    start = sample_date,\n",
+    "    end = sample_date\n",
+    ").df\n",
     "\n",
     "# Review the first 5 rows of the Alpaca DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "df_portfolio"
    ]
   },
   {
@@ -500,30 +608,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "117.97"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Access the closing price for AGG from the Alpaca DataFrame\n",
     "# Converting the value to a floating point number\n",
-    "agg_close_price = # YOUR CODE HERE\n",
+    "agg_close_price = float(df_portfolio['AGG']['close'])\n",
     "\n",
     "# Print the AGG closing price\n",
-    "# YOUR CODE HERE\n"
+    "agg_close_price"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "348.29"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Access the closing price for SPY from the Alpaca DataFrame\n",
     "# Converting the value to a floating point number\n",
-    "spy_close_price = # YOUR CODE HERE\n",
+    "spy_close_price = float(df_portfolio['SPY']['close'])\n",
     "\n",
     "# Print the SPY closing price\n",
-    "# YOUR CODE HERE\n"
+    "spy_close_price"
    ]
   },
   {
@@ -535,55 +665,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current value of the bond portfolio is $ 23594.00\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the current value of the bond portion of the portfolio\n",
-    "agg_value = # YOUR CODE HERE\n",
+    "agg_value = agg_close_price * agg_shares\n",
     "\n",
     "# Print the current value of the bond portfolio\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"The current value of the bond portfolio is ${agg_value: .2f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current value of the stock portfolio is $ 38311.90\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the current value of the stock portion of the portfolio\n",
-    "spy_value = # YOUR CODE HERE\n",
+    "spy_value = spy_close_price * spy_shares\n",
     "\n",
     "# Print the current value of the stock portfolio\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"The current value of the stock portfolio is ${spy_value: .2f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current value of the bond and stock portfolio is $ 61905.90\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the total value of the stock and bond portion of the portfolio\n",
-    "total_stocks_bonds = # YOUR CODE HERE\n",
+    "total_stocks_bonds = agg_value + spy_value\n",
     "\n",
     "# Print the current balance of the stock and bond portion of the portfolio\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"The current value of the bond and stock portfolio is ${total_stocks_bonds: .2f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current value of the total portfolio is $ 144296.64\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the total value of the member's entire savings portfolio\n",
     "# Add the value of the cryptocurrency walled to the value of the total stocks and bonds\n",
-    "total_portfolio = # YOUR CODE HERE\n",
+    "total_portfolio = total_stocks_bonds + total_crypto_wallet\n",
     "\n",
-    "# Print current cryptocurrency wallet balance\n",
-    "# YOUR CODE HERE\n"
+    "# Print current total portolfio balance\n",
+    "print(f\"The current value of the total portfolio is ${total_portfolio: .2f}\")\n"
    ]
   },
   {
